# GenesisxProject

./: README.md  build.gradle.kts  gradle.properties  gradlew.bat  settings.gradle.kts
.github/: dependabot.yml
app/: CMakeLists.txt  build.gradle.kts  google-services.json  native-libs.gradle  native-libs.gradle.kts  proguard-rules.pro
app/src/androidTest/java/dev/aurakai/auraframefx/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: aura_mood_orb.json  client_secret_905643639467-dlseaflf0pm0s6c9v16p5nm9si2r0u66.apps.googleusercontent.com.json  kai_alert.json  kai_idle.json  kai_listening.json  kai_pulse.json  kai_speaking.json  kai_thinking.json  voice_waves.json  xposed_init
app/src/main/cpp/: AuraFrameFX.cpp  CMakeLists.txt  aura_fx_lib.cpp
app/src/main/java/dev/aurakai/auraframefx/: AuraFrameFXApplication.kt  MainActivity.kt  MainApplication.kt  NativeLib.kt
app/src/main/java/dev/aurakai/auraframefx/ai/: AuraAIService.kt  KaiController.kt  NeuralWhisper.kt  README.md  SecurityContext.kt
app/src/main/java/dev/aurakai/auraframefx/data/: ApiService.kt
app/src/main/java/dev/aurakai/auraframefx/di/: AppInitializer.kt  AppModule.kt  HiltWorkerFactory.kt  KaiModule.kt  NeuralWhisperModule.kt  WorkManagerModule.kt
app/src/main/java/dev/aurakai/auraframefx/service/: VertexCloudService.java  VertexSyncService.java
app/src/main/java/dev/aurakai/auraframefx/ui/: AIFeaturesScreen.kt  AuraAIService.kt  AuraDotLottieOrb.kt  AuraLottieOrb.kt  AuraMood.kt  EcosystemMenuScreen.kt  MenuScreen.kt  NavHost.kt  NeonElements.kt  NeonText.kt  NeonWireframeBorders.kt  PlaceholderAuraOrb.kt  Theme.kt  Type.kt  screens.kt
app/src/main/java/dev/aurakai/auraframefx/utils/: AuraNavigationUtil.kt  AuraSummonGestureDetector.kt  DisplayUtils.kt
app/src/main/java/dev/aurakai/auraframefx/xposed/: AuraXposedEntry.kt  XposedStatusUtil.kt
app/src/main/java/java/com/aurakai/visualization/: CascadeVisionScreen.kt  ConferenceRoomScreen.kt
app/src/main/res/drawable/: ic_conversation_secure.xml  ic_kai_settings.xml  ic_launcher_background.xml  ic_network_shield.xml  ic_neural_bridge.xml  ic_notification.xml  ic_privacy_shield.xml  orb_static.xml
app/src/main/res/layout/: fragment_neural_whisper.xml  view_aura_mood_orb.xml  view_kai_notch_bar.xml
app/src/main/res/values/: arrays.xml  cloud_run.xml  colors.xml  google_config.xml  menu_colors.xml  oauth.xml  strings.xml  styles.xml  theme.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml  xposed_compat.xml
app/src/main/xposed/: AuraXposedEntry.kt  XposedStatusUtil.kt
app/src/test/java/dev/aurakai/auraframefx/: ExampleUnitTest.kt
(+37 files in other folders)
